deploy/k8s/identity/base/identity-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-api-cluster-ip
  namespace: evolution
  labels:
      app: identity-api
spec:
  type: ClusterIP
  selector:
    app: identity-api
  ports:
  - name: identity-api-port
    protocol: TCP
    port: 80
    targetPort: 80
