deploy/k8s/identity/base/identity-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api
  namespace: evolution
  annotations: 
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
      nginx.org/mergeable-ingress-type: "minion"
  labels:
    name: identity-api
spec:
  rules:
  - host: evolution.k8
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: identity-api-cluster-ip
            port: 
              number: 80
      - path: /connect
        pathType: Prefix
        backend:
          service:
            name: identity-api-cluster-ip
            port: 
              number: 80
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: identity-api-cluster-ip
            port: 
              number: 80
